...
                                </tableViewCellContentView>
                            </tableViewCell>
                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" accessoryType="detailButton" indentationWidth="10" reuseIdentifier="score" textLabel="NxV-Fi-xkl" detailTextLabel="Vhm-gF-oTG" style="IBUITableViewCellStyleValue1" id="OJ0-1h-ag2">
                                <rect key="frame" x="16" y="136.33333587646484" width="343" height="43.666667938232422"/>
                                <autoresizingMask key="autoresizingMask"/>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Card details" id="Mc3-5M-moi">
                        <barButtonItem key="rightBarButtonItem" systemItem="action" id="bav-lo-bek">
                            <connections>
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Authenticity score" id="uXH-B3-rVB"/>
                    <connections>
                        <outlet property="descriptionTextView" destination="ZrO-9U-CAQ" id="HLK-xK-V5q"/>
...
                                <rect key="frame" x="95" y="386.66666666666669" width="185" height="39"/>
                                <color key="backgroundColor" red="0.21176470588235294" green="0.68627450980392157" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="scanCard"/>
                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="24"/>
                                <inset key="contentEdgeInsets" minX="10" minY="5" maxX="10" maxY="5"/>
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="ID capture" id="LTm-zq-ENL">
                        <barButtonItem key="backBarButtonItem" title="Scan ID card" id="GVF-D4-kBs"/>
                        <barButtonItem key="leftBarButtonItem" title="Settings" image="settings" id="B72-ga-2Zx">
                            <connections>
                                <segue destination="K3b-VW-Lj0" kind="show" id="SB4-06-fG1"/>
...
                                                <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="qpa-lz-wbd">
                                                    <rect key="frame" x="278" y="6.3333333333333321" width="51" height="30.999999999999996"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="microblinkSwitch"/>
                                                    <connections>
                                                        <action selector="toggleMicroblink:" destination="K3b-VW-Lj0" eventType="valueChanged" id="PNP-Bd-cCP"/>
...
                                <rect key="frame" x="61" y="386.66666666666669" width="253" height="39"/>
                                <color key="backgroundColor" red="0.21176470589999999" green="0.68627450980000004" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="compareToSelfie"/>
                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="24"/>
                                <inset key="contentEdgeInsets" minX="10" minY="5" maxX="10" maxY="5"/>
...
                            <imageView clipsSubviews="YES" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="OBa-my-eO3">
                                <rect key="frame" x="67.666666666666686" y="140.66666666666669" width="240" height="151.66666666666669"/>
                                <accessibility key="accessibilityConfiguration" identifier="cardImage"/>
                                <gestureRecognizers/>
                                <constraints>
...
                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JjF-Aq-BjA">
                                <rect key="frame" x="111" y="292.33333333333331" width="153" height="29"/>
                                <accessibility key="accessibilityConfiguration" identifier="qualityWarning"/>
                                <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                <state key="normal" title="⚠️Face quality warning">
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Your ID card" id="f1c-7x-LLu"/>
                    <connections>
                        <outlet property="captureSelfieButton" destination="Ki3-Nd-msq" id="TL4-ob-b2m"/>
...
