...
    
    func startScan() {
        guard let licenceKey = Bundle.main.object(forInfoDictionaryKey: "blinkIdLicenceKey") as? String else {
            return
        }
        MBMicroblinkSDK.shared().setLicenseKey(licenceKey, errorCallback: { error in
            let alert = UIAlertController(title: "Error", message: "Failed to set barcode scanner licence key", preferredStyle: .alert)
            alert.addAction(UIAlertAction(title: "OK", style: .cancel))
            self.viewController.present(alert, animated: true)
        })
        self.recognizer = MBIdBarcodeRecognizer()
        /** Create BlinkID settings */
        let settings : MBBlinkIdOverlaySettings = MBBlinkIdOverlaySettings()
...
